--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,14 @@
     <section class="portfolio-block project">
         <div class="container">
             <div class="heading">
-                <h2>Group -&nbsp;</h2>
+                <h2>Group -&nbsp 21;</h2>
             </div>
-            <div class="image"
-                style="background-image:url(&quot;{{url_for('static',filename='assets/img/tech/image3.jpg')}}&quot;);">
+            <div class="live">
+                <button type="button" class="btn btn-primary">Live Demo</button>
             </div>
+            <!-- <div class="image"
+                style="background-image:url(&quot;{{url_for('static',filename='assets/img/Answer-Sheet-copy.jpeg')}}&quot;);">
+            </div> -->
             <div class="row">
                 <div class="col-12 col-md-6 offset-md-1 info">
                     <h3>Description</h3>
@@ -32,16 +35,16 @@
             </div>
             <div class="col-12 col-md-3 offset-md-1 meta">
                 <div class="tags">
+                    <span class="meta-heading">Mentor</span>
+                    <h3 style="padding: 0px 0px ; margin: 0px 0px;">Prof. Anil Kumar Singh</h3>
+                    <span>President of Student Activity Center, Chairman , Institute Health Center, Associate Dean, Research and Consultancy</span>
                     <span class="meta-heading">Members</span>
-                    <span>BT18CSE038 - Ashish Lakra</span>
-                    <span>BT18CSE054 - Rishabh Agrawal</span>
-                    <span>BT18CSE073 - Jay Puri Goswami</span>
-                    <span>BT18CSE075 - Harshal Sable</span>
-                    <span>BT18CSE077 - Anurag Baral</span>
-                    <span>BT18CSE091 - Rishikesh Rachchh</span>
-                    <span>BT18CSE147 - Prince Sharma</span>
+                    <span>20204127 - Nilesh Malav</span>
+                    <span>20204128 - Niraj Gupta</span>
+                    <span>20204129 - Nishchay Chaurasia</span>
+                    <span>20204130 - Nitesh Rana</span>
 
-                    <span class="meta-heading">Date</span><span>April 11, 2021</span></div>
+                    <span class="meta-heading">Date</span><span>1 December, 2023</span></div>
             </div>
         </div>
         </div>
