--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,10 @@
 		<link rel="stylesheet" href="{{ url_for('static',filename='assets/bootstrap/css/bootstrap.min.css')}}">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
 		<link rel="stylesheet" href="{{ url_for('static',filename='assets/fonts/ionicons.min.css')}}">
+		<link rel="stylesheet" href="{{ url_for('static',filename='assets/main.css')}}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+		
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	</head>
 	<body>
 		<nav
@@ -45,7 +48,7 @@
 		<footer class="page-footer">
 			<div class="container">
 				<div class="links">
-					<a href="#">Contact me</a><a href="#">Projects</a>
+					<a href="#">Group 21</a><a href="#">Team</a>
 				</div>
 				<div class="social-icons">
 					<a href="#"><i class="icon ion-social-facebook"></i></a
@@ -56,8 +59,9 @@
 			</div>
 		</footer>
 		<script src="{{ url_for('static',filename='assets/js/jquery.min.js')}}"></script>
-		<script src="{{ url_for('static',filename='assets/bootstrap/js/bootstrap.min.js')}}"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
 		<script src="{{ url_for('static',filename='assets/js/theme.js')}}"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 	</body>
 </html>
