--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,13 @@
             <div class="heading">
                 <h2>Group -&nbsp 21;</h2>
             </div>
-            <div class="live">
-                <button type="button" class="btn btn-primary">Live Demo</button>
-            </div>
-            <!-- <div class="image"
-                style="background-image:url(&quot;{{url_for('static',filename='assets/img/Answer-Sheet-copy.jpeg')}}&quot;);">
-            </div> -->
+            <a href="{{url_for('home')}}">
+
+                <div class="live">
+                    <button type="button" class="btn btn-primary">Live Demo</button>
+                </div>
+         
+            </a>
             <div class="row">
                 <div class="col-12 col-md-6 offset-md-1 info">
                     <h3>Description</h3>
