--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
             <div class="heading">
                 <h2>Group -&nbsp 21;</h2>
             </div>
-            <a href="{{url_for('home')}}">
+            <a href="live-demo">
 
                 <div class="live">
                     <button type="button" class="btn btn-primary">Live Demo</button>
